--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,13 @@
-<p>navbar works!</p>
+<div>
+  <ul>
+    <li
+      routerLink="/"
+      routerLinkActive="active"
+      [routerLinkActiveOptions]="{ exact: true }"
+    >
+      Home
+    </li>
+    <li routerLink="/contact" routerLinkActive="active">Contact</li>
+    <li><a href="./assets/files/dogEn.jpg" download>Download CV</a></li>
+  </ul>
+</div>
