--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<h1>Hola mundo</h1>
-<router-outlet></router-outlet>
+<div>
+  <app-navbar></app-navbar>
+</div>
+<div>
+  <router-outlet></router-outlet>
+</div>
+<div>
+  <app-footer></app-footer>
+</div>
