--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,17 @@
-<p>footer works!</p>
+<div>
+  <a href="https://github.com/hitses" target="_blank"
+    ><img class="f-icon" src="./assets/imgs/icons/github.svg" alt="github icon"
+  /></a>
+
+  <a
+    href="https://www.linkedin.com/in/jer%C3%B3nimo-gasc%C3%B3n-s%C3%A1nchez-b12588123/"
+    target="_blank"
+    ><img
+      class="f-icon"
+      src="./assets/imgs/icons/linkedin.svg"
+      alt="linkedin icon"
+  /></a>
+
+  <p><small>Esta web está protegida por reCAPTCHA y Google</small></p>
+  <p>Copyright &#169; {{ year }} - Jerónimo Gascón</p>
+</div>
