--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,31 +1,28 @@
-<h1>Título</h1>
+<h1>{{ "home.title" | translate }}</h1>
 <hr />
 
-<p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo et tempore
-  aliquam fugit iure odit nam, labore veritatis pariatur nemo accusamus eos
-  numquam quas placeat enim sunt. Corrupti, cupiditate soluta!
-</p>
+<p *ngFor="let paragraph of presentationParagraphs">{{ paragraph }}</p>
 
-<h2>Título 2</h2>
-<p>
-  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis quam rem
-  amet, molestiae tenetur officia similique numquam dolores. Labore sequi
-  repellat fugit tempora. Autem minima nostrum nisi illum laborum ipsa.
-</p>
+<h2>{{ "home.now.title" | translate }}</h2>
+<p>{{ "home.now.paragraph" | translate }}</p>
 
-<h2>Título 3</h2>
+<h2>{{ "home.jobs.title" | translate }}</h2>
+
 <app-cv
   *ngFor="let job of jobs"
-  [title]="job.title"
-  [ps]="job.p"
+  [company]="job.company"
+  [date]="job.date"
+  [paragraphs]="job.paragraphs"
+  [link]="job.link"
   [icons]="job.icons"
 ></app-cv>
 
-<h2>Título 4</h2>
+<!-- <h2>Título 4</h2>
 <app-cv
   *ngFor="let study of studies"
-  [title]="study.title"
-  [ps]="study.p"
+  [center]="study.center"
+  [date]="study.date"
+  [paragraphs]="study.paragraphs"
+  [link]="study.link"
   [icons]="study.icons"
-></app-cv>
+></app-cv> -->
