--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
   [icons]="job.icons"
 ></app-cv>
 
-<!-- <h2>Título 4</h2>
+<h2>{{ "home.studies.title" | translate }}</h2>
 <app-cv
   *ngFor="let study of studies"
   [center]="study.center"
@@ -25,4 +25,4 @@
   [paragraphs]="study.paragraphs"
   [link]="study.link"
   [icons]="study.icons"
-></app-cv> -->
+></app-cv>
