--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<div>
+<header>
   <app-navbar></app-navbar>
-</div>
-<div>
-  <router-outlet></router-outlet>
-</div>
-<div>
+</header>
+<router-outlet></router-outlet>
+<footer>
   <app-footer></app-footer>
-</div>
+</footer>
