--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div>
+<nav>
   <ul>
     <li
       routerLink="/"
@@ -11,9 +11,9 @@
       {{ "navbar.contact" | translate }}
     </li>
     <li>
-      <a href="./assets/files/dogEn.jpg" download>{{
-        "navbar.download" | translate
-      }}</a>
+      <a [href]="'navbar.download.file' | translate" download>
+        {{ "navbar.download.title" | translate }}
+      </a>
     </li>
     <li>
       <div>
@@ -21,15 +21,13 @@
           (click)="changeLang('es')"
           src="./assets/flags/es.svg"
           [alt]="'navbar.flags.es' | translate"
-          width="50px"
         />
         <img
           (click)="changeLang('en')"
           src="./assets/flags/gb.svg"
           [alt]="'navbar.flags.en' | translate"
-          width="50px"
         />
       </div>
     </li>
   </ul>
-</div>
+</nav>
