--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,3 +1,56 @@
-.error {
-  color: red;
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 10%;
+  input:-webkit-autofill,
+  input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
+  }
+  input[data-autocompleted] {
+    background-color: transparent !important;
+  }
+  input,
+  textarea {
+    font-family: "OxygenLight";
+    background-color: var(--back);
+    margin: 10px;
+    border: 2px solid var(--secondary);
+    color: var(--primary);
+    padding: 10px;
+  }
+  label {
+    margin: 0 10px;
+  }
+  .error {
+    color: var(--warning);
+  }
+  input:focus,
+  textarea:focus {
+    outline: none;
+  }
+  textarea {
+    height: 35vh;
+    resize: none;
+  }
+  textarea::-webkit-scrollbar {
+    width: 3px;
+  }
+  textarea::-webkit-scrollbar-thumb {
+    background-color: var(--secondary);
+  }
+  button {
+    border: 2px solid var(--secondary);
+    background-color: var(--back);
+    color: var(--primary);
+    font-family: "OxygenBold";
+    font-size: 18px;
+    height: 50px;
+    margin: 10px;
+    padding: 0;
+  }
+  button:hover {
+    background-color: var(--secondary);
+    color: var(--back);
+  }
 }
