--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,22 +1,29 @@
 <div>
-  <a href="https://github.com/hitses" target="_blank"
-    ><img
-      class="f-icon"
-      src="./assets/imgs/icons/github.svg"
-      [alt]="'footer.icons.github' | translate"
-  /></a>
+  <img
+    src="./assets/imgs/jeronimo_gascon_photo_masc.png"
+    alt="Jerónimo Gascón"
+  />
+  <div>
+    <div>
+      <a href="https://github.com/hitses" target="_blank"
+        ><img
+          class="f-icon"
+          src="./assets/imgs/icons/github.svg"
+          [alt]="'footer.icons.github' | translate"
+      /></a>
 
-  <a
-    href="https://www.linkedin.com/in/jer%C3%B3nimo-gasc%C3%B3n-s%C3%A1nchez-b12588123/"
-    target="_blank"
-    ><img
-      class="f-icon"
-      src="./assets/imgs/icons/linkedin.svg"
-      [alt]="'footer.icons.linkedin' | translate"
-  /></a>
-
-  <p>
-    <small>{{ "footer.captcha" | translate }}</small>
-  </p>
-  <p>Copyright &#169; {{ year }} - Jerónimo Gascón</p>
+      <a
+        href="https://www.linkedin.com/in/jer%C3%B3nimo-gasc%C3%B3n-s%C3%A1nchez-b12588123/"
+        target="_blank"
+        ><img
+          class="f-icon"
+          src="./assets/imgs/icons/linkedin.svg"
+          [alt]="'footer.icons.linkedin' | translate"
+      /></a>
+    </div>
+    <p>
+      <small>{{ "footer.captcha" | translate }}</small>
+    </p>
+    <p>Copyright &#169; {{ year }} - Jerónimo Gascón</p>
+  </div>
 </div>
