--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,28 +1,30 @@
-<h1>{{ "home.title" | translate }}</h1>
-<hr />
+<div class="info">
+  <h1>{{ "home.title" | translate }}</h1>
+  <hr />
 
-<p *ngFor="let paragraph of presentationParagraphs">{{ paragraph }}</p>
+  <p *ngFor="let paragraph of presentationParagraphs">{{ paragraph }}</p>
 
-<h2>{{ "home.now.title" | translate }}</h2>
-<p>{{ "home.now.paragraph" | translate }}</p>
+  <h2>{{ "home.now.title" | translate }}</h2>
+  <p>{{ "home.now.paragraph" | translate }}</p>
 
-<h2>{{ "home.jobs.title" | translate }}</h2>
+  <h2>{{ "home.jobs.title" | translate }}</h2>
 
-<app-cv
-  *ngFor="let job of jobs"
-  [company]="job.company"
-  [date]="job.date"
-  [paragraphs]="job.paragraphs"
-  [link]="job.link"
-  [icons]="job.icons"
-></app-cv>
+  <app-cv
+    *ngFor="let job of jobs"
+    [company]="job.company"
+    [date]="job.date"
+    [paragraphs]="job.paragraphs"
+    [link]="job.link"
+    [icons]="job.icons"
+  ></app-cv>
 
-<h2>{{ "home.studies.title" | translate }}</h2>
-<app-cv
-  *ngFor="let study of studies"
-  [center]="study.center"
-  [date]="study.date"
-  [paragraphs]="study.paragraphs"
-  [link]="study.link"
-  [icons]="study.icons"
-></app-cv>
+  <h2>{{ "home.studies.title" | translate }}</h2>
+  <app-cv
+    *ngFor="let study of studies"
+    [center]="study.center"
+    [date]="study.date"
+    [paragraphs]="study.paragraphs"
+    [link]="study.link"
+    [icons]="study.icons"
+  ></app-cv>
+</div>
