--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -15,8 +15,16 @@
     !invalidField("message") ? message : invalidMessage
   }}</label>
   <textarea formControlName="message"></textarea>
-  <button *ngIf="!sending" [disabled]="mailSended" type="submit">
+  <button
+    *ngIf="!sending && !serverError"
+    [disabled]="mailSended"
+    type="submit"
+  >
     {{ mailSended ? "✔︎" : sendButton }}
+  </button>
+  <button *ngIf="serverError" disabled type="submit">
+    {{ "contact.buttons.error" | translate }}
+    <a href="mailto:contact@jerogassan.dev">contact@jerogassan.dev</a>
   </button>
   <button *ngIf="sending" disabled type="submit">
     <app-loader></app-loader>
