--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -48,9 +48,16 @@ form {
     height: 50px;
     margin: 10px;
     padding: 0;
+    a {
+      color: var(--secondary);
+      text-decoration: none;
+    }
   }
   button:hover {
     background-color: var(--secondary);
     color: var(--back);
+    a {
+      color: var(--primary);
+    }
   }
 }
