--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     <li routerLink="/contact" routerLinkActive="active">
       {{ "navbar.contact" | translate }}
     </li>
-    <li>
+    <li class="btn">
       <a [href]="'navbar.download.file' | translate" download>
         {{ "navbar.download.title" | translate }}
       </a>
