--- a/src/app/cv/cv.component.scss
+++ b/src/app/cv/cv.component.scss
@@ -1,7 +1,10 @@
 div {
   padding: 0 3%;
   h3 {
-    cursor: default;
+    cursor: pointer;
+    width: fit-content;
+    margin: 0 auto;
+    margin-bottom: 20px;
     font-size: 22px;
     text-align: center;
   }
