--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -10,6 +10,7 @@ nav {
     align-items: center;
     li {
       list-style: none;
+      cursor: pointer;
       a {
         color: #fffefa;
         text-decoration: none;
@@ -30,6 +31,23 @@ nav {
     }
     li:hover {
       color: #fecc00;
+    }
+    .btn {
+      cursor: default;
+      padding: 5px;
+      border: 1px solid var(--secondary);
+      background-color: var(--secondary);
+      border-radius: 15px;
+      -webkit-border-radius: 15px;
+      -moz-border-radius: 15px;
+      -ms-border-radius: 15px;
+      -o-border-radius: 15px;
+      a {
+        color: var(--back);
+      }
+      a:hover {
+        color: var(--back);
+      }
     }
   }
   .active {
