Update LinkedIn link

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,9 +12,7 @@
           [alt]="'footer.icons.github' | translate"
       /></a>
 
-      <a
-        href="https://www.linkedin.com/in/jer%C3%B3nimo-gasc%C3%B3n-s%C3%A1nchez-b12588123/"
-        target="_blank"
+      <a href="https://www.linkedin.com/in/jerogassan/" target="_blank"
         ><img
           class="f-icon"
           src="./assets/imgs/icons/linkedin.svg"
