--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,11 @@
   --secondary: #fecc00;
   --back: #0f0f0f;
   --warning: #e40d1c;
+  --title: 34px;
+  --subtitle: 30px;
+  --headline: 22px;
+  --paragraph: 18px;
+  --small: 10px;
 }
 
 html,
