--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -2,7 +2,7 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin: 0 10%;
+  margin: 0 20%;
   input:-webkit-autofill,
   input:-webkit-autofill:focus {
     transition: background-color 600000s 0s, color 600000s 0s;
@@ -13,6 +13,7 @@ form {
   input,
   textarea {
     font-family: "OxygenLight";
+    font-size: var(--paragraph);
     background-color: var(--back);
     margin: 10px;
     border: 2px solid var(--secondary);
@@ -20,6 +21,7 @@ form {
     padding: 10px;
   }
   label {
+    font-size: var(--paragraph);
     margin: 0 10px;
   }
   .error {
@@ -44,7 +46,7 @@ form {
     background-color: var(--back);
     color: var(--primary);
     font-family: "OxygenBold";
-    font-size: 18px;
+    font-size: var(--headline);
     height: 50px;
     margin: 10px;
     padding: 0;
@@ -66,5 +68,11 @@ form {
     a {
       color: var(--primary);
     }
+  }
+}
+
+@media (max-width: 718px) {
+  form {
+    margin: 0 10%;
   }
 }
