--- a/src/app/cv/cv.component.scss
+++ b/src/app/cv/cv.component.scss
@@ -5,25 +5,26 @@ div {
     width: fit-content;
     margin: 0 auto;
     margin-bottom: 20px;
-    font-size: 22px;
+    font-size: var(--headline);
     text-align: center;
   }
   .date {
-    font-size: 16px;
+    font-size: var(--paragraph);
     text-align: center;
   }
   a {
+    font-size: var(--paragraph);
     width: 100%;
     text-decoration: none;
     display: block;
     width: fit-content;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     color: var(--secondary);
   }
   p {
     font-family: "OxygenLight";
+    font-size: var(--paragraph);
   }
   .icons {
     display: flex;
