Update icon styles

--- a/src/app/cv/cv.component.scss
+++ b/src/app/cv/cv.component.scss
@@ -32,7 +32,7 @@ div {
     max-width: 500px;
     flex-wrap: wrap;
     align-content: space-around;
-    margin: 0 auto;
+    margin: 0 auto 25px auto;
     img {
       min-width: 35px;
       max-width: 35px;
