A - Link al blog personal

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,6 +18,13 @@
           src="./assets/imgs/icons/linkedin.svg"
           [alt]="'footer.icons.linkedin' | translate"
       /></a>
+
+      <a href="https://jerogassan-logs.web.app/blog" target="_blank"
+        ><img
+          class="f-icon"
+          src="./assets/imgs/icons/blog.svg"
+          [alt]="'footer.icons.blog' | translate"
+      /></a>
     </div>
     <p>
       <small>{{ "footer.captcha" | translate }}</small>
