U - Link al blog

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,7 +19,7 @@
           [alt]="'footer.icons.linkedin' | translate"
       /></a>
 
-      <a href="https://jerogassan-logs.web.app/blog" target="_blank"
+      <a href="https://jerogassanlogs.web.app/blog" target="_blank"
         ><img
           class="f-icon"
           src="./assets/imgs/icons/blog.svg"
