U - Justify content from end to flex-end

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -26,7 +26,7 @@ nav {
       div {
         width: 100px;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         img {
           padding-left: 20%;
           height: 25px;
